Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -44,17 +44,17 @@ gigs:
     location: Ambassador hotel
     venue: Amsterdam
     url:
-  - title: Jazz meets Bernstein
+  - title: Mike del Ferro
     date: 2018-07-24 20:00:00
     location: Albania Jazz festival
-    venue: Tirana
+    venue: Tirana (Albania)
     url:
   - title: Mike del Ferro & Mike Boddé - Mike Kwadraat
     date: 2018-11-17 20:30:00
     location: Porgy & Bess
     venue: Terneuzen (NL)
     url: 'http://www.porgyenbess.nl'
-  - title: Mike del Ferro-Jazz meets Bernstein
+  - title: Mike del Ferro-
     date: 2018-07-28 20:00:00
     location: TBA
     venue: Tirana (Albania)
