Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -31,19 +31,19 @@ gigs:
     url: 'http://www.splendoramsterdam.com'
   - title: Mike del Ferro trio
     date: 2018-06-16 15:30:00
-    location: TBA
-    venue: Zeeland
+    location: Eef festival
+    venue: Goes (NL)
     url:
   - title: Mike del Ferro wit members of the Rotterdam Philharmonic
     date: 2018-06-21 20:00:00
-    location: TBA
+    location: Dutch Embassy
     venue: Paris (F)
     url:
   - title: Mike del Ferro & Svenja Staats
-    date: 2018-06-10 15:00:00
+    date: 2018-06-10 16:00:00
     location: Ambassador hotel
     venue: Amsterdam
-    url:
+    url: 'https://m.facebook.com/literairesalon/?locale2=nl_NL'
   - title: Mike del Ferro
     date: 2018-07-24 20:00:00
     location: Albania Jazz festival
