Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ gigs:
     url: 'http://www.klokkenspelvereniging.nl'
   - title: 'Canto Ostinato meets Jazz, Mike del Ferro & Jeroen van Veen'
     date: 2018-06-09 20:00:00
-    location: Tivoli Vredenburg
-    venue: Utrecht
+    location: Tenclub
+    venue: Amsterdam
     url: 'https://www.facebook.com/events/1479100408868491/'
   - title: Mike Boddé & Mike del Ferro
     date: 2018-12-21 20:00:00
