--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,4 @@
 gigs:
-  - title: 'Mike del Ferro, Tony Lakatos, Sebastian Netta and Uli Wentzlaff'
-    date: 2018-06-03 16:00:00
-    location: muensterland studios.
-    venue: Münster (Germany)
-    url: 'http://www.muensterlandstudios.de'
   - title: 'Summer evening up in the Dom tower, Utrecht with the music of Sting'
     date: 2018-08-20 20:00:00
     location: Domtoren
@@ -58,4 +53,51 @@ gigs:
     date: 2018-07-28 20:00:00
     location: TBA
     venue: Tirana (Albania)
+    url:
+  - title: 'Mike Boddé & Mike del Ferro, Mike Kwadraat'
+    date: 2018-12-21 20:00:00
+    location: Lantaren Venster
+    venue: Rotterdam (NL)
+    url: 'https://www.lantarenvenster.nl/programma/mike-kwadraat/'
+  - title: >-
+      Opera meets Jazz! With members of the Metropole orchestra & Claron
+      McFadden
+    date: 2019-01-11 20:00:00
+    location: Meervaart
+    venue: Amsterdam (NL)
+    url:
+  - title: >-
+      Opera meets Jazz! With members of the Metropole orchestra & Claron
+      McFadden
+    date: 2019-01-03 20:00:00
+    location: De Flint
+    venue: Amersfoort (NL
+    url:
+  - title: >-
+      Opera meets Jazz! With members of the Metropole orchestra & Claron
+      McFadden
+    date: 2019-01-04 20:00:00
+    location: De Vereeniging
+    venue: Nijmegen (NL)
+    url:
+  - title: >-
+      Opera meets Jazz! With members of the Metropole orchestra & Claron
+      McFadden
+    date: 2019-01-05 20:00:00
+    location: Theater
+    venue: Hoorn (NL)
+    url:
+  - title: >-
+      Opera meets Jazz! With members of the Metropole orchestra & Claron
+      McFadden
+    date: 2019-01-09 20:00:00
+    location: Nieuwe Luxor
+    venue: Rotterdam (NL)
+    url:
+  - title: >-
+      Opera meets Jazz! With members of the Metropole orchestra & Claron
+      McFadden
+    date: 2019-01-10 20:00:00
+    location: Theater
+    venue: Enschede (NL)
     url:
