--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@ gigs:
     location: Domtoren
     venue: Utrecht (NL)
     url: 'http://www.klokkenspelvereniging.nl'
-  - title: 'Canto Ostinato meets Jazz, Mike del Ferro & Jeroen van Veen'
-    date: 2018-06-09 20:00:00
-    location: Tenclub
-    venue: Amsterdam
-    url: 'https://www.facebook.com/events/1479100408868491/'
+  - title: Mike del Ferro trio with Sebastian Netta & Ingo Senst
+    date: 2018-07-13 20:00:00
+    location: TBA
+    venue: Germany
+    url: 'http://wuw.netta.de'
   - title: Mike Boddé & Mike del Ferro
     date: 2018-12-21 20:00:00
     location: Lantaren Venster
@@ -19,26 +19,26 @@ gigs:
     location: TBA
     venue: Bishkek (Kyrgistan)
     url:
-  - title: Solo performance at Pianists evening in Amsterdam
-    date: 2018-06-06 20:00:00
-    location: Splendor
-    venue: Amsterdam  (NL)
-    url: 'http://www.splendoramsterdam.com'
+  - title: Mike del Ferro trio with Sebastian Netta & Ingo Senst
+    date: 2018-07-14 20:00:00
+    location: TBA
+    venue: Germany
+    url:
   - title: Mike del Ferro trio
     date: 2018-06-16 15:30:00
     location: Eef festival
     venue: Goes (NL)
-    url:
+    url: 'https://www.eeffestival.nl'
   - title: Mike del Ferro wit members of the Rotterdam Philharmonic
     date: 2018-06-21 20:00:00
     location: Dutch Embassy
     venue: Paris (F)
     url:
-  - title: Mike del Ferro & Svenja Staats
-    date: 2018-06-10 16:00:00
-    location: Ambassador hotel
-    venue: Amsterdam
-    url: 'https://m.facebook.com/literairesalon/?locale2=nl_NL'
+  - title: Mike del Ferro trio with Sebastian Netta & Ingo Senst
+    date: 2018-07-15 16:00:00
+    location: TBA
+    venue: Germany
+    url:
   - title: Mike del Ferro
     date: 2018-07-24 20:00:00
     location: Albania Jazz festival
