Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -24,15 +24,15 @@ gigs:
     location: TBA
     venue: Germany
     url:
-  - title: Mike del Ferro trio
-    date: 2018-06-16 15:30:00
-    location: Eef festival
-    venue: Goes (NL)
-    url: 'https://www.eeffestival.nl'
-  - title: Mike del Ferro wit members of the Rotterdam Philharmonic
-    date: 2018-06-21 20:00:00
-    location: Dutch Embassy
-    venue: Paris (F)
+  - title: Mike del Ferro trio & David Linx
+    date: 2018-12-15 20:30:00
+    location: Splendor
+    venue: Amsterdam (NL)
+    url: 'https://www.splendoramsterdam.com'
+  - title: Masterclass
+    date: 2018-11-14 10:00:00
+    location: Jazz Schule
+    venue: Basel (CH)
     url:
   - title: Mike del Ferro trio with Sebastian Netta & Ingo Senst
     date: 2018-07-15 16:00:00
