Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -14,16 +14,6 @@ gigs:
     location: Lantaren Venster
     venue: Rotterdam (NL)
     url: 'http://www.lantarenvenster.nl'
-  - title: 'Jazz meets Bernstein, Mike del Ferro trio with Deborah Carter'
-    date: 2018-07-01 16:00:00
-    location: TBA
-    venue: Bishkek (Kyrgistan)
-    url:
-  - title: Mike del Ferro trio with Sebastian Netta & Ingo Senst
-    date: 2018-07-14 20:00:00
-    location: TBA
-    venue: Germany
-    url:
   - title: Mike del Ferro trio & David Linx
     date: 2018-12-15 20:30:00
     location: Splendor
@@ -34,13 +24,8 @@ gigs:
     location: Jazz Schule
     venue: Basel (CH)
     url:
-  - title: Mike del Ferro trio with Sebastian Netta & Ingo Senst
-    date: 2018-07-15 16:00:00
-    location: TBA
-    venue: Germany
-    url:
-  - title: Mike del Ferro
-    date: 2018-07-24 20:00:00
+  - title: Mike del Ferro & Kim Hoorweg
+    date: 2018-07-25 20:00:00
     location: Albania Jazz festival
     venue: Tirana (Albania)
     url:
@@ -49,7 +34,7 @@ gigs:
     location: Porgy & Bess
     venue: Terneuzen (NL)
     url: 'http://www.porgyenbess.nl'
-  - title: Mike del Ferro-
+  - title: Mike del Ferro. Masterclass
     date: 2018-07-28 20:00:00
     location: TBA
     venue: Tirana (Albania)
