--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 gigs:
-  - title: 'Summer evening up in the Dom tower, Utrecht with the music of Sting'
-    date: 2018-08-20 20:00:00
-    location: Domtoren
-    venue: Utrecht (NL)
-    url: 'http://www.klokkenspelvereniging.nl'
+  - title: Mike del Ferro solo recital
+    date: 2018-09-24 19:00:00
+    location: Rene van Beeck's stage
+    venue: Amsterdam (NL)
+    url: >-
+      https://www.facebook.com/René-van-Beeck-pianos-vleugels-podium-229411223771915/?timeline_context_item_type=intro_card_work&timeline_context_item_source=1092073354&fref=tag
   - title: Mike Boddé & Mike del Ferro
     date: 2018-12-21 20:00:00
     location: Lantaren Venster
