Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -83,3 +83,8 @@ gigs:
     location: Theater
     venue: Enschede (NL)
     url:
+  - title: Mike del Ferro & David Linx
+    date: 2018-12-15 20:00:00
+    location: Splendor
+    venue: Amsterdam
+    url: www.splendoramsterdam.nl
