Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -88,3 +88,8 @@ gigs:
     location: Splendor
     venue: Amsterdam
     url: www.splendoramsterdam.nl
+  - title: 'Mike del Ferro & Mike Boddé , Mike Kwadraat'
+    date: 2018-11-28 20:00:00
+    location: Pianino
+    venue: Den Haag (NL)
+    url: 'https://www.facebook.com/pianinotheater/'
