Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -93,3 +93,8 @@ gigs:
     location: Pianino
     venue: Den Haag (NL)
     url: 'https://www.facebook.com/pianinotheater/'
+  - title: 'Mike del Ferro & Mike Boddé,, Mike Kwadraat'
+    date: 2018-11-16 20:00:00
+    location: Tivoli Vredenburg
+    venue: Utrecht
+    url: 'https://www.tivolivredenburg.nl/agenda/mike-kwadraat-16-11-2018/'
