Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -98,3 +98,8 @@ gigs:
     location: Tivoli Vredenburg
     venue: Utrecht
     url: 'https://www.tivolivredenburg.nl/agenda/mike-kwadraat-16-11-2018/'
+  - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
+    date: 2018-11-20 22:00:00
+    location: The Tower
+    venue: Zutphen (NL)
+    url: 'https://www.facebook.com/jazzatthetower/'
