Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -103,3 +103,8 @@ gigs:
     location: The Tower
     venue: Zutphen (NL)
     url: 'https://www.facebook.com/jazzatthetower/'
+  - title: with Michael Moore
+    date: 2018-12-01 20:00:00
+    location: Splendor
+    venue: Amsterdam
+    url: www.splendoramsterdam.com
