--- a/_config.yml
+++ b/_config.yml
@@ -108,3 +108,8 @@ gigs:
     location: Splendor
     venue: Amsterdam
     url: www.splendoramsterdam.com
+  - title: 'with Jeroen van Veen, Canto Ostinato and beyond'
+    date: 2019-02-09 20:00:00
+    location: Pernissimo
+    venue: Pernis (NL)
+    url: www.pernissimo.org
