Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -113,3 +113,8 @@ gigs:
     location: Pernissimo
     venue: Pernis (NL)
     url: www.pernissimo.org
+  - title: Mike del Ferro & David Linx
+    date: 2018-12-05 20:00:00
+    location: De Observant
+    venue: Amersfoort
+    url: www.deobservant.nl
