Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -113,8 +113,13 @@ gigs:
     location: Pernissimo
     venue: Pernis (NL)
     url: www.pernissimo.org
-  - title: Mike del Ferro & David Linx
+  - title: Mike del Ferro trio  & David Linx
     date: 2018-12-05 20:00:00
     location: De Observant
     venue: Amersfoort
     url: www.deobservant.nl
+  - title: Mike del Ferro trio and David Linx Concert at 1PM!)
+    date: 2018-12-09 13:00:00
+    location: Beauforthuis
+    venue: Austerlitz
+    url: www.beauforthuis.nl
