--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@ gigs:
     venue: Rotterdam (NL)
     url: >-
       http://www.rotterdamsphilharmonisch.nl/nl/concerten/andré-heuvelman-yoga-soundscapes
-  - title: Mike Boddé & Mike del Ferro
-    date: 2018-12-21 20:00:00
-    location: Lantaren Venster
-    venue: Rotterdam (NL)
-    url: 'http://www.lantarenvenster.nl'
+  - title: 'Tour Japan, May 2019, more details soon'
+    date: 2019-05-12 20:00:00
+    location:
+    venue: Japan
+    url:
   - title: Mike del Ferro trio & David Linx
     date: 2018-12-15 20:30:00
     location: Splendor
@@ -83,11 +83,11 @@ gigs:
     location: Theater
     venue: Enschede (NL)
     url:
-  - title: Mike del Ferro & David Linx
-    date: 2018-12-15 20:00:00
-    location: Splendor
-    venue: Amsterdam
-    url: www.splendoramsterdam.nl
+  - title: 'Tour Norway, more details soon'
+    date: 2019-05-04 20:00:00
+    location: Norway
+    venue:
+    url:
   - title: 'Mike del Ferro & Mike Boddé , Mike Kwadraat'
     date: 2018-11-28 20:00:00
     location: Pianino
