Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -128,3 +128,8 @@ gigs:
     location: Hot Clube
     venue: Lissabon (Portugal)
     url:
+  - title: 'Tour USA , more details soon'
+    date: 2019-03-04 13:00:00
+    location: USA
+    venue:
+    url:
