Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -55,17 +55,20 @@ gigs:
     date: 2019-01-04 20:00:00
     location: De Vereeniging
     venue: Nijmegen (NL)
-    url:
+    url: >-
+      https://www.stadsschouwburgendevereeniging.nl/programma/4110/Mike_del_Ferro_Trio_ft_Claron_McFadden_i_s_m_musici_uit_het_Metropole_Orkest/New_Belcanto_Opera_Meets_Jazz
   - title: 'with the Metropole orchestra & Claron McFadden, Opera meets Jazz!!'
     date: 2019-01-05 20:00:00
     location: Theater
     venue: Hoorn (NL)
-    url:
+    url: >-
+      https://www.hetpark.nl/voorstellingen/10224/New_Belcanto_Opera_Meets_Jazz/Mike_del_Ferro_Trio_ft_Claron_McFadden/?gclid=CjwKCAjwu5veBRBBEiwAFTqDwZ9gG_D35ZCzxKD65c1x3yg626grq_eRW5q2fHr2FdT9GptJ-V11xhoCzJ8QAvD_BwE&type=show
   - title: 'with the Metropole orchestra & Claron McFadden, Opera meets Jazz!!'
     date: 2019-01-09 20:00:00
     location: Nieuwe Luxor
     venue: Rotterdam (NL)
-    url:
+    url: >-
+      https://www.luxortheater.nl/voorstellingen/4332/Mike_del_Ferro_Trio_ft_Claron_McFadden_en_het_Metropole_Orkest/Opera_meets_Jazz/
   - title: 'with the Metropole orchestra & Claron McFadden, Opera meets Jazz!!'
     date: 2019-01-10 20:00:00
     location: Theater
