Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -130,3 +130,14 @@ gigs:
     location: Splendor
     venue: Amsterdam
     url: 'https://www.splendoramsterdam.com'
+  - title: 'Duo with Jeroen van Veen, Canto Ostinato and Beyond'
+    date: 2019-02-15 20:00:00
+    location: Tenclub
+    venue: Amsterdam
+    url:
+  - title: with Josee Koning
+    date: 2019-02-17 20:00:00
+    location: Gelderlandfabriek
+    venue: Culemborg (NL)
+    url: >-
+      https://www.degelderlandfabriek.nl/events/event/muziek-jam-jazz-pizza-josee-koning-mike-del-ferro/
