Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 gigs:
-  - title: Yoga & Soundscapes in the early morning 7am!! With André Heuvelman
-    date: 2018-10-21 07:00:00
-    location: Gebouw De Rotterdam
-    venue: Rotterdam (NL)
-    url: >-
-      http://www.rotterdamsphilharmonisch.nl/nl/concerten/andré-heuvelman-yoga-soundscapes
+  - title: 'Mike Boddé & Mike del Ferro, Mike Kwadraat'
+    date: 2018-11-24 20:30:00
+    location: Splendor
+    venue: Amsterdam (NL)
+    url: 'https://www.splendoramsterdam.com'
   - title: 'Tour Japan, May 2019, more details soon'
     date: 2019-05-12 20:00:00
     location:
@@ -95,8 +94,8 @@ gigs:
     location: Jazz at the the Tower
     venue: Zutphen (NL)
     url: 'https://www.facebook.com/jazzatthetower/'
-  - title: with Michael Moore
-    date: 2018-12-01 20:00:00
+  - title: solo recital in Amsterdam
+    date: 2019-02-02 20:30:00
     location: Splendor
     venue: Amsterdam
     url: www.splendoramsterdam.com
