--- a/_config.yml
+++ b/_config.yml
@@ -29,12 +29,11 @@ gigs:
     location: Porgy & Bess
     venue: Terneuzen (NL)
     url: 'http://www.porgyenbess.nl'
-  - title: 'Mike del Ferro, Rogerio Boccato, Hermine Deurloo, Joris Teepe'
-    date: 2018-10-30 20:00:00
-    location: De Oosterpoort
-    venue: Groningen (NL)
-    url: >-
-      https://www.de-oosterpoort.nl/programma/joris-teepe-presents-nyctg-rogerio-boccato-30-oktober/
+  - title: Mike del Ferro & Maya friedman
+    date: 2018-10-30 20:30:00
+    location: Munganga
+    venue: Amsterdam (NL)
+    url: 'https://www.munganga.nl'
   - title: 'Mike Boddé & Mike del Ferro, Mike Kwadraat'
     date: 2018-12-21 20:00:00
     location: Lantaren Venster
