Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ gigs:
     url: 'https://www.ntk.nl/voorstelling/new-belcanto-opera-meets-jazz'
   - title: 'with the Metropole orchestra & Claron McFadden, Opera meets Jazz!!'
     date: 2019-01-03 20:00:00
-    location: De Flint
+    location: Flint
     venue: Amersfoort (NL
     url: 'https://www.ntk.nl/voorstelling/new-belcanto-opera-meets-jazz'
   - title: 'with the Metropole orchestra & Claron McFadden, Opera meets Jazz!!'
