--- a/_config.yml
+++ b/_config.yml
@@ -110,3 +110,8 @@ gigs:
     venue: Culemborg (NL)
     url: >-
       https://www.degelderlandfabriek.nl/events/event/muziek-jam-jazz-pizza-josee-koning-mike-del-ferro/
+  - title: CD recordings in Belgium with David Linx
+    date: 2018-12-17 20:00:00
+    location:
+    venue:
+    url:
