--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,12 @@ gigs:
     location:
     venue: Japan
     url:
-  - title: Mike del Ferro & Dodo Kis -Bimhuis Lab
-    date: 2019-01-28 20:30:00
-    location: Bimhuis
-    venue: Amsterdam (NL)
-    url: 'https://www.bimhuis.com'
-  - title: Mike del Ferro & Maya Fridman
+  - title: Mike del Ferro and Guests
+    date: 2019-03-02 20:00:00
+    location: TBA
+    venue: Atlanta (USA)
+    url:
+  - title: Mike del Ferro & Maya Fridman-Jobim and more
     date: 2019-02-16 20:30:00
     location: Munganga
     venue: Amsterdam (NL)
@@ -20,52 +20,90 @@ gigs:
     venue:
     url:
   - title: >-
-      Mike del Ferro & André Heuvelman, Infinite Now: Concerts with beautiful
+      Mike del Ferro & André Heuvelman, Infinite Now: Concert with beautiful
       Visuals
     date: 2019-02-08 20:00:00
     location: Pianino
     venue: Den Haag (NL)
     url: 'https://www.facebook.com/pianinotheater/'
-  - title: >-
-      Mike del Ferro & André Heuvelman, Infinite Now: Concerts with beautiful
-      Visuals
-    date: 2019-02-02 20:30:00
-    location: Splendor
-    venue: Amsterdam
-    url: www.splendoramsterdam.com
+  - title: Mike del Ferro trio
+    date: 2019-03-03 20:30:00
+    location: Velvet Note
+    venue: Atlanta (USA)
+    url: 'https://thevelvetnote.com/'
   - title: 'with Jeroen van Veen, Canto Ostinato and beyond'
     date: 2019-02-09 20:00:00
     location: Pernissimo
     venue: Pernis (NL)
     url: www.pernissimo.org
-  - title: Mike del Ferro & Friends
+  - title: 'Mike del Ferro 4tet with Ricardo Pinheiro, Massimo Cavalli and Joel Silva'
     date: 2019-03-23 20:00:00
     location: Hot Clube
     venue: Lisbon (Portugal)
     url: 'https://www.hcp.pt'
-  - title: Mike del Ferro trio and Andre Heuvelman
+  - title: Holland Americas Group with Andre Heuvelman and Santiago Cimadevilla
     date: 2019-03-07 21:00:00
     location: Le poisson Rouge
     venue: New York City (US)
     url: 'https://www.lpr.com'
-  - title: Mike del Ferro tba
+  - title: 'Mike del Ferro 4tet with Ricardo Pinheiro, Massimo Cavalli and Joel Silva'
     date: 2019-03-22 20:00:00
     location: Hot Clube
     venue: Lissabon (Portugal)
     url: 'https://www.hcp.pt'
-  - title: 'Tour USA , more details soon'
-    date: 2019-02-28 13:00:00
-    location: USA
-    venue:
-    url:
+  - title: Holland Americas Group with Andre Heuvelman and Santiago Cimadevilla
+    date: 2019-02-28 18:00:00
+    location: Areté Venue & Gallery
+    venue: New York (USA)
+    url: 'https://www.aretevenue.com'
   - title: 'Duo with Jeroen van Veen, Canto Ostinato and Beyond'
     date: 2019-02-15 20:00:00
     location: Tenclub
     venue: Amsterdam
-    url:
+    url: 'https://www.facebook.com/onbehalfoftenclub/'
   - title: with Josee Koning
     date: 2019-02-17 20:00:00
     location: Gelderlandfabriek
     venue: Culemborg (NL)
     url: >-
       https://www.degelderlandfabriek.nl/events/event/muziek-jam-jazz-pizza-josee-koning-mike-del-ferro/
+  - title: Clinic "selfmanagement and networking for musicians"
+    date: 2019-03-11 18:00:00
+    location: Berklee
+    venue: Boston (USA)
+    url: 'https://bostonconservatory.berklee.edu'
+  - title: Mike del Ferro Solo recital (at Noon!)
+    date: 2019-03-13 12:00:00
+    location: Lafayette College
+    venue: Easton (USA)
+    url: 'https://www.lafayette.edu/'
+  - title: 'Mike del Ferro trio with Bram Wijnands (bass), drums TBA'
+    date: 2019-03-14 20:00:00
+    location: Kansas City Bier Company
+    venue: Kansas City (USA)
+    url: 'https://kcbier.com'
+  - title: 'Mike del Ferro trio with Bram Wijnands (bass), drums TBA'
+    date: 2019-03-15 20:00:00
+    location: The Majestic
+    venue: Kansas City (USA)
+    url: 'http://majestickc.com/upcoming-shows/'
+  - title: 'Mike del Ferro trio with Bram Wijnands (bass), drums TBA'
+    date: 2019-03-16 20:00:00
+    location: The Majestic
+    venue: Kansas City (USA
+    url: 'http://majestickc.com/upcoming-shows/'
+  - title: with Andre Heuvelman and Trajecti Voices Choir
+    date: 2019-04-06 20:00:00
+    location: Church
+    venue: Diepenveen (NL)
+    url: 'https://www.trajectivoces.net'
+  - title:
+    date: 2019-04-07 16:00:00
+    location: Catharina Church
+    venue: Utrecht (NL)
+    url: 'https://www.trajectivoces.net'
+  - title: with daughter Ella del Ferro and her band
+    date: 2019-04-08 20:00:00
+    location: Melkweg
+    venue: Amsterdam (NL)
+    url: 'https://www.melkweg.nl'
