Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ gigs:
     location: Tenclub
     venue: Amsterdam
     url: 'https://www.facebook.com/onbehalfoftenclub/'
-  - title: with Josee Koning
+  - title: 'Duo with Josee Koning, Brazilian Songs (Afternoon Concert!)'
     date: 2019-02-17 20:00:00
     location: Gelderlandfabriek
     venue: Culemborg (NL)
