--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ gigs:
     location: Church
     venue: Diepenveen (NL)
     url: 'https://www.trajectivoces.net'
-  - title:
+  - title: with Andre Heuvelman and Trajecti Voices Choir (afternoon concert!)
     date: 2019-04-07 16:00:00
     location: Catharina Church
     venue: Utrecht (NL)
