Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -77,17 +77,21 @@ gigs:
     location: Lafayette College
     venue: Easton (USA)
     url: 'https://www.lafayette.edu/'
-  - title: 'Mike del Ferro trio with Bram Wijnands (bass), drums TBA'
+  - title: 'Mike del Ferro trio with Bram Wijnands (bass), Pat Adams (Drums)'
     date: 2019-03-14 20:00:00
     location: Kansas City Bier Company
     venue: Kansas City (USA)
     url: 'https://kcbier.com'
-  - title: 'Mike del Ferro trio with Bram Wijnands (bass), drums TBA'
+  - title: >-
+      Mike del Ferro trio with Bram Wijnands (bass), Pat Adams (Drums) & Bobby
+      Watson
     date: 2019-03-15 20:00:00
     location: The Majestic
     venue: Kansas City (USA)
     url: 'http://majestickc.com/upcoming-shows/'
-  - title: 'Mike del Ferro trio with Bram Wijnands (bass), drums TBA'
+  - title: >-
+      Mike del Ferro trio with Bram Wijnands (bass), Pat Adams (Drums) & Bobby
+      Watson
     date: 2019-03-16 20:00:00
     location: The Majestic
     venue: Kansas City (USA
