Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@ gigs:
     location:
     venue: Japan
     url:
-  - title: Mike del Ferro and Guests
-    date: 2019-03-02 20:00:00
+  - title: Mike del Ferro solo and with Leslie Christopher (Concert at 5PM!)
+    date: 2019-03-02 17:00:00
     location: TBA
     venue: Atlanta (USA)
-    url:
+    url: 'https://app.eventsframe.com/e/m39GQuHiE/mike-del-ferro-live/'
   - title: Mike del Ferro & Maya Fridman-Jobim and more
     date: 2019-02-16 20:30:00
     location: Munganga
