Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ gigs:
     url:
   - title: Mike del Ferro solo and with Leslie Christopher (Concert at 5PM!)
     date: 2019-03-02 17:00:00
-    location: Ken Gregory Studios
+    location: 'Ken Gregory Studios, 800 East Ave Northeast, Atlanta, GA 30312-1412'
     venue: Atlanta (USA)
     url: 'https://app.eventsframe.com/e/m39GQuHiE/mike-del-ferro-live/'
   - title: Mike del Ferro & Maya Fridman-Jobim and more
