Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ gigs:
     location: Velvet Note
     venue: Atlanta (USA)
     url: 'https://thevelvetnote.com/'
-  - title: 'with Jeroen van Veen, Canto Ostinato and beyond'
-    date: 2019-02-09 20:00:00
+  - title: 'The Infinite now, Mesmerizing Visuals with Live Music'
+    date: 2019-04-11 20:00:00
     location: Pernissimo
     venue: Pernis (NL)
     url: www.pernissimo.org
