Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ gigs:
     location:
     venue: Japan
     url:
-  - title: Mike del Ferro & Maya Fridman-Jobim and more
-    date: 2019-02-16 20:30:00
+  - title: with Zoumana Diarra
+    date: 2019-06-01 20:30:00
     location: Munganga
     venue: Amsterdam (NL)
     url: 'https://www.munganga.nl'
