--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,20 @@
 gigs:
+  - title: Mike del Ferro solo and with Leslie Christopher (Concert at 5PM!)
+    date: 2019-03-02 17:00:00
+    location: 'Ken Gregory Studios, 800 East Ave Northeast, Atlanta, GA 30312-1412'
+    venue: Atlanta (USA)
+    url: 'https://app.eventsframe.com/e/m39GQuHiE/mike-del-ferro-live/'
   - title: Holland Americas Group
     date: 2019-03-10 17:00:00
     location: Le Poisson Rouge
     venue: New York City (US)
     url: >-
       https://lpr.com/lpr_events/holland-americas-group-march-10-2019/?fbclid=IwAR2aZ_JvuaiGPU5yBcsPoO8Wj4gpru3onaUU1wL3h4It25RKbOBWQtAtCDE
-  - title: Mike del Ferro solo and with Leslie Christopher (Concert at 5PM!)
-    date: 2019-03-02 17:00:00
-    location: 'Ken Gregory Studios, 800 East Ave Northeast, Atlanta, GA 30312-1412'
-    venue: Atlanta (USA)
-    url: 'https://app.eventsframe.com/e/m39GQuHiE/mike-del-ferro-live/'
-  - title: 'Tour Japan, May 2019, more details soon'
-    date: 2019-05-12 20:00:00
-    location:
-    venue: Japan
-    url:
+  - title: Mike del Ferro trio with Sebastiaan Kaptein and Yasuhito Mori
+    date: 2019-05-24 20:00:00
+    location: Body and Soul
+    venue: Tokyo- Japan
+    url: www.bodyandsoul.co.jp
   - title: with Zoumana Diarra
     date: 2019-06-01 20:30:00
     location: Munganga
